--- a/src/view/data obat.fxml
+++ b/src/view/data obat.fxml
@@ -8,22 +8,22 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="627.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.MasukController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="627.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ObatController">
    <children>
       <Label layoutX="24.0" layoutY="10.0" prefHeight="37.0" prefWidth="127.0" text="DATA OBAT">
          <font>
             <Font name="System Bold" size="22.0" />
          </font>
       </Label>
-      <JFXTextField labelFloat="true" layoutX="17.0" layoutY="51.0" promptText="Masukkan Nama Obat" />
-      <JFXTextField labelFloat="true" layoutX="18.0" layoutY="92.0" promptText="Masukkan Jenis Obat" />
-      <JFXTextField labelFloat="true" layoutX="18.0" layoutY="127.0" promptText="Masukkan Stock" />
-      <JFXTextField labelFloat="true" layoutX="18.0" layoutY="164.0" promptText="Masukkan Satuan" />
-      <JFXDatePicker layoutX="18.0" layoutY="200.0" promptText="Tanggal Expered" />
-      <JFXTreeTableView layoutX="272.0" layoutY="-1.0" prefHeight="400.0" prefWidth="355.0" />
-      <JFXButton fx:id="tambah" layoutX="12.0" layoutY="248.0" text="Tambah" />
-      <JFXButton fx:id="ubah" layoutX="77.0" layoutY="248.0" text="Ubah" />
-      <JFXButton fx:id="hapus" layoutX="135.0" layoutY="248.0" text="Hapus" />
-      <JFXButton fx:id="batal" layoutX="197.0" layoutY="248.0" text="Batal" />
+      <JFXTextField fx:id="namaField" labelFloat="true" layoutX="17.0" layoutY="51.0" promptText="Masukkan Nama Obat" />
+      <JFXTextField fx:id="jenisField" labelFloat="true" layoutX="18.0" layoutY="92.0" promptText="Masukkan Jenis Obat" />
+      <JFXTextField fx:id="stokField" labelFloat="true" layoutX="18.0" layoutY="127.0" promptText="Masukkan Stock" />
+      <JFXTextField fx:id="satuanField" labelFloat="true" layoutX="18.0" layoutY="164.0" promptText="Masukkan Satuan" />
+      <JFXDatePicker fx:id="datePicker" layoutX="18.0" layoutY="200.0" promptText="Tanggal Expered" />
+      <JFXTreeTableView onMousePressed="#onmousepressed"  fx:id="tableView" layoutX="272.0" layoutY="-1.0" prefHeight="400.0" prefWidth="355.0" />
+      <JFXButton fx:id="tambah" onAction="#tambahaction"  layoutX="12.0" layoutY="248.0" text="Tambah" />
+      <JFXButton fx:id="ubah" onAction="#ubahaction"  layoutX="77.0" layoutY="248.0" text="Ubah" />
+      <JFXButton fx:id="hapus" onAction="#hapusaction"  layoutX="135.0" layoutY="248.0" text="Hapus" />
+      <JFXButton fx:id="batal" onAction="#batalaction"  layoutX="197.0" layoutY="248.0" text="Batal" />
    </children>
 </AnchorPane>
