--- a/src/view/obat keluar.fxml
+++ b/src/view/obat keluar.fxml
@@ -3,6 +3,7 @@
 <?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXDatePicker?>
 <?import com.jfoenix.controls.JFXTextField?>
+<?import com.jfoenix.controls.JFXComboBox?>
 <?import com.jfoenix.controls.JFXTreeTableView?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -17,19 +18,17 @@
             <Font name="System Bold" size="22.0" />
          </font>
       </Label>
-      <JFXTextField layoutX="27.0" layoutY="61.0" promptText="Masukkan Nama Obat" />
-      <JFXTextField layoutX="28.0" layoutY="102.0" promptText="Masukkan Jenis Obat" />
-      <JFXTextField fx:id="Jumlah" layoutX="28.0" layoutY="137.0" promptText="Masukkan Stock" text="Jumlah" />
-      <JFXTextField fx:id="Harga" layoutX="28.0" layoutY="174.0" promptText="Masukkan Satuan" text="Harga" />
-      <JFXTreeTableView fx:id="tableView" layoutX="360.0" layoutY="-1.0" prefHeight="400.0" prefWidth="500.0" />
+      <JFXComboBox fx:id="obatCombo" onAction="#pilihobataction"  layoutX="18.0"  layoutY="50.0" prefWidth="140.0"  promptText="Pilih Obat" />
+      <JFXTextField fx:id="hargaField" layoutX="18.0" layoutY="90.0" editable="false"  promptText="Harga"/>
+      <JFXTextField fx:id="jumlahField" layoutX="18.0" layoutY="130.0" promptText="Masukkan Jumlah"/>
+      <JFXTreeTableView fx:id="tableView" onMousePressed="#onmousepressed"  layoutX="360.0" layoutY="-1.0" prefHeight="400.0" prefWidth="500.0" />
       <ButtonBar layoutY="235.0" prefHeight="40.0" prefWidth="330.0">
         <buttons>
-            <JFXButton fx:id="tambah"  style="-fx-background-color: red;" text="Tambah" />
-            <JFXButton fx:id="ubah"  style="-fx-background-color: red;" text="Ubah" />
-            <JFXButton fx:id="hapus"  style="-fx-background-color: red;" text="Hapus" />
-            <JFXButton fx:id="batal"  style="-fx-background-color: red;" text="Batal" />
+            <JFXButton fx:id="tambah" onAction="#tambahaction"  style="-fx-background-color: red;" text="Tambah" />
+            <JFXButton fx:id="ubah" onAction="#ubahaction"  style="-fx-background-color: red;" text="Ubah" />
+            <JFXButton fx:id="hapus" onAction="#hapusaction"  style="-fx-background-color: red;" text="Hapus" />
+            <JFXButton fx:id="batal" onAction="#batalaction"  style="-fx-background-color: red;" text="Batal" />
         </buttons>
       </ButtonBar>
-      <JFXDatePicker fx:id="Tanggal" layoutX="28.0" layoutY="211.0" />
    </children>
 </AnchorPane>
