--- a/src/view/obat masuk.fxml
+++ b/src/view/obat masuk.fxml
@@ -19,15 +19,15 @@
       </Label>
       <JFXComboBox fx:id="obatCombo" layoutX="18.0"  layoutY="50.0" prefWidth="140.0"  promptText="Pilih Obat" />
       <JFXComboBox fx:id="suppCombo" layoutX="18.0"  layoutY="90.0" prefWidth="140.0"  promptText="Pilih Supplier" />
-      <JFXTextField layoutX="18.0" layoutY="130.0" promptText="Masukkan Jumlah"/>
-      <JFXDatePicker layoutX="18.0" layoutY="170.0" promptText="Tanggal Expired" />
-      <JFXTreeTableView fx:id="tableView" layoutX="360.0" layoutY="-1.0" prefHeight="400.0" prefWidth="500.0"/>
+      <JFXTextField fx:id="jumlahField" layoutX="18.0" layoutY="130.0" promptText="Masukkan Jumlah"/>
+      <JFXDatePicker fx:id="expDatePicker" layoutX="18.0" layoutY="170.0" promptText="Tanggal Expired" />
+      <JFXTreeTableView fx:id="tableView" onMousePressed="#onmousepressed"  layoutX="360.0" layoutY="-1.0" prefHeight="400.0" prefWidth="500.0"/>
       <ButtonBar layoutY="235.0" prefHeight="40.0" prefWidth="330.0">
         <buttons>
-            <JFXButton fx:id="tambah"  style="-fx-background-color: red;" text="Tambah" />
-            <JFXButton fx:id="ubah"  style="-fx-background-color: red;" text="Ubah" />
-            <JFXButton fx:id="hapus"  style="-fx-background-color: red;" text="Hapus" />
-            <JFXButton fx:id="batal"  style="-fx-background-color: red;" text="Batal" />
+            <JFXButton fx:id="tambah" onAction="#tambahaction" style="-fx-background-color: red;" text="Tambah" />
+            <JFXButton fx:id="ubah" onAction="#ubahaction"  style="-fx-background-color: red;" text="Ubah" />
+            <JFXButton fx:id="hapus" onAction="#hapusaction"  style="-fx-background-color: red;" text="Hapus" />
+            <JFXButton fx:id="batal" onAction="#batalaction"  style="-fx-background-color: red;" text="Batal" />
         </buttons>
       </ButtonBar>
    </children>
