--- a/src/view/login.fxml
+++ b/src/view/login.fxml
@@ -9,7 +9,6 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.LoginController">
    <children>
       <Label layoutX="378.0" layoutY="151.0" text="LOGIN" textFill="#d34747">
@@ -19,7 +18,7 @@
       </Label>
       <ImageView fitHeight="199.0" fitWidth="171.0" layoutX="88.0" layoutY="131.0">
          <image>
-            <Image url="@../../../../../Downloads/skripsi/564d8c274433987b55926961c0aa2de5.jpg" />
+            <Image url="@../gambar/564d8c274433987b55926961c0aa2de5.jpg" />
          </image>
       </ImageView>
       <AnchorPane prefHeight="90.0" prefWidth="600.0" style="-fx-background-color: #e11818;">
@@ -36,8 +35,8 @@
             </Label>
          </children>
       </AnchorPane>
-      <JFXTextField fx:id="username" layoutX="355.0" layoutY="210.0" promptText="Masukan Username" />
-      <JFXPasswordField fx:id="password" layoutX="355.0" layoutY="257.0" promptText="Masukan Password" />
+      <JFXTextField fx:id="username" labelFloat="true" layoutX="355.0" layoutY="210.0" promptText="Masukan Username" />
+      <JFXPasswordField fx:id="password" labelFloat="true" layoutX="355.0" layoutY="257.0" promptText="Masukan Password" />
       <JFXButton fx:id="login" layoutX="352.0" layoutY="305.0" onAction="#actionLogin" style="-fx-background-color: red;" text="Login">
          <font>
             <Font name="System Bold" size="12.0" />
