--- a/src/view/obat masuk.fxml
+++ b/src/view/obat masuk.fxml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXComboBox?>
 <?import com.jfoenix.controls.JFXDatePicker?>
 <?import com.jfoenix.controls.JFXTextField?>
-<?import com.jfoenix.controls.JFXComboBox?>
 <?import com.jfoenix.controls.JFXTreeTableView?>
+<?import javafx.scene.control.ButtonBar?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
-<?import javafx.scene.control.ButtonBar?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="627.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.MasukController">
    <children>
@@ -17,17 +17,17 @@
             <Font name="System Bold" size="22.0" />
          </font>
       </Label>
-      <JFXComboBox fx:id="obatCombo" layoutX="18.0"  layoutY="50.0" prefWidth="140.0"  promptText="Pilih Obat" />
-      <JFXComboBox fx:id="suppCombo" layoutX="18.0"  layoutY="90.0" prefWidth="140.0"  promptText="Pilih Supplier" />
-      <JFXTextField fx:id="jumlahField" layoutX="18.0" layoutY="130.0" promptText="Masukkan Jumlah"/>
-      <JFXDatePicker fx:id="expDatePicker" layoutX="18.0" layoutY="170.0" promptText="Tanggal Expired" />
-      <JFXTreeTableView fx:id="tableView" onMousePressed="#onmousepressed"  layoutX="360.0" layoutY="-1.0" prefHeight="400.0" prefWidth="500.0"/>
+      <JFXComboBox fx:id="obatCombo" layoutX="18.0" layoutY="50.0" prefWidth="140.0" promptText="Pilih Obat" />
+      <JFXComboBox fx:id="suppCombo" layoutX="18.0" layoutY="90.0" prefWidth="140.0" promptText="Pilih Supplier" />
+      <JFXTextField fx:id="jumlahField" labelFloat="true" layoutX="18.0" layoutY="130.0" promptText="Masukkan Jumlah" />
+      <JFXDatePicker fx:id="expDatePicker" layoutX="18.0" layoutY="170.0" overLay="true" promptText="Tanggal Expired" />
+      <JFXTreeTableView fx:id="tableView" layoutX="360.0" layoutY="-1.0" onMousePressed="#onmousepressed" prefHeight="400.0" prefWidth="500.0" />
       <ButtonBar layoutY="235.0" prefHeight="40.0" prefWidth="330.0">
         <buttons>
             <JFXButton fx:id="tambah" onAction="#tambahaction" style="-fx-background-color: red;" text="Tambah" />
-            <JFXButton fx:id="ubah" onAction="#ubahaction"  style="-fx-background-color: red;" text="Ubah" />
-            <JFXButton fx:id="hapus" onAction="#hapusaction"  style="-fx-background-color: red;" text="Hapus" />
-            <JFXButton fx:id="batal" onAction="#batalaction"  style="-fx-background-color: red;" text="Batal" />
+            <JFXButton fx:id="ubah" onAction="#ubahaction" style="-fx-background-color: red;" text="Ubah" />
+            <JFXButton fx:id="hapus" onAction="#hapusaction" style="-fx-background-color: red;" text="Hapus" />
+            <JFXButton fx:id="batal" onAction="#batalaction" style="-fx-background-color: red;" text="Batal" />
         </buttons>
       </ButtonBar>
    </children>
