--- a/src/view/data obat.fxml
+++ b/src/view/data obat.fxml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXButton?>
-<?import com.jfoenix.controls.JFXDatePicker?>
 <?import com.jfoenix.controls.JFXTextField?>
 <?import com.jfoenix.controls.JFXTreeTableView?>
+<?import javafx.scene.control.ButtonBar?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
-<?import javafx.scene.control.ButtonBar?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="627.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ObatController">
    <children>
@@ -21,14 +20,15 @@
       <JFXTextField fx:id="satuanField" labelFloat="true" layoutX="18.0" layoutY="130.0" promptText="Masukkan Satuan" />
       <JFXTextField fx:id="hargaBeliField" labelFloat="true" layoutX="18.0" layoutY="170.0" promptText="Masukkan Harga Beli" />
       <JFXTextField fx:id="hargaJualField" labelFloat="true" layoutX="18.0" layoutY="210.0" promptText="Masukkan Harga Jual" />
-      <JFXTreeTableView onMousePressed="#onmousepressed"  fx:id="tableView" layoutX="360.0" layoutY="-1.0" prefHeight="400.0" prefWidth="500.0" />
-      <ButtonBar layoutY="235.0" prefHeight="40.0" prefWidth="330.0">
+      <JFXTreeTableView fx:id="tableView" layoutX="360.0" layoutY="-1.0" onMousePressed="#onmousepressed" prefHeight="400.0" prefWidth="500.0" />
+      <ButtonBar layoutY="244.0" prefHeight="40.0" prefWidth="330.0">
         <buttons>
-            <JFXButton fx:id="tambah" onAction="#tambahaction" style="-fx-background-color: red;" text="Tambah" />
-            <JFXButton fx:id="ubah" onAction="#ubahaction" style="-fx-background-color: red;" text="Ubah" />
-            <JFXButton fx:id="hapus" onAction="#hapusaction" style="-fx-background-color: red;" text="Hapus" />
-            <JFXButton fx:id="batal" onAction="#batalaction" style="-fx-background-color: red;" text="Batal" />
+            <JFXButton fx:id="tambah" onAction="#tambahaction" style="-fx-background-color: #07bbf1;" text="Tambah" textFill="#f8f8f8" />
+            <JFXButton fx:id="ubah" onAction="#ubahaction" style="-fx-background-color: #07bbf1;" text="Ubah" textFill="#fffbfb" />
+            <JFXButton fx:id="hapus" onAction="#hapusaction" style="-fx-background-color: #07bbf1;" text="Hapus" textFill="#f5f4f4" />
+            <JFXButton fx:id="batal" onAction="#batalaction" style="-fx-background-color: #07bbf1;" text="Batal" textFill="#fffdfd" />
         </buttons>
       </ButtonBar>
+      <JFXButton fx:id="print" layoutX="276.0" layoutY="14.0" onAction="#printlaporan" prefHeight="25.0" prefWidth="75.0" style="-fx-background-color: #07bbf1;" text="Print" />
    </children>
 </AnchorPane>
