--- a/src/view/data supplier.fxml
+++ b/src/view/data supplier.fxml
@@ -13,7 +13,7 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.SupplierController">
    <children>
-      <VBox prefHeight="238.0" prefWidth="350.0" spacing="20.0">
+      <VBox layoutY="2.0" prefHeight="261.0" prefWidth="350.0" spacing="20.0">
          <children>
             <Label prefHeight="37.0" prefWidth="171.0" text="DATA SUPPLIER">
                <font>
@@ -28,14 +28,15 @@
             <Insets left="30.0" right="50.0" />
          </padding>
       </VBox>
-      <JFXTreeTableView fx:id="tableView" layoutX="360.0" layoutY="-1.0" onMousePressed="#onmousepressed" prefHeight="400.0" prefWidth="500.0" />
-      <ButtonBar layoutY="235.0" prefHeight="40.0" prefWidth="330.0">
+      <JFXTreeTableView fx:id="tableView" layoutX="356.0" layoutY="-1.0" onMousePressed="#onmousepressed" prefHeight="400.0" prefWidth="500.0" />
+      <ButtonBar layoutY="258.0" prefHeight="40.0" prefWidth="330.0">
         <buttons>
-            <JFXButton fx:id="tambah" onAction="#tambahaction" style="-fx-background-color: red;" text="Tambah" />
-            <JFXButton fx:id="ubah" onAction="#ubahaction" style="-fx-background-color: red;" text="Ubah" />
-            <JFXButton fx:id="hapus" onAction="#hapusaction" style="-fx-background-color: red;" text="Hapus" />
-            <JFXButton fx:id="batal" onAction="#batalaction" style="-fx-background-color: red;" text="Batal" />
+            <JFXButton fx:id="tambah" onAction="#tambahaction" style="-fx-background-color: #07bbf1;" text="Tambah" textFill="WHITE" />
+            <JFXButton fx:id="ubah" onAction="#ubahaction" style="-fx-background-color: #07bbf1;" text="Ubah" textFill="WHITE" />
+            <JFXButton fx:id="hapus" onAction="#hapusaction" style="-fx-background-color: #07bbf1;" text="Hapus" textFill="WHITE" />
+            <JFXButton fx:id="batal" onAction="#batalaction" style="-fx-background-color: #07bbf1;" text="Batal" textFill="WHITE" />
         </buttons>
       </ButtonBar>
+      <JFXButton fx:id="print" layoutX="274.0" layoutY="10.0" onAction="#printlaporan" prefHeight="25.0" prefWidth="75.0" style="-fx-background-color: #07bbf1;" text="Print" />
    </children>
 </AnchorPane>
